rescaling background and somewhat fixing the head nav on smaller screens

--- a/assets/css/teammolde.css
+++ b/assets/css/teammolde.css
@@ -6473,7 +6473,7 @@ body {
   color: #000;
 }
 #team-logo {
-  margin: 20px 0px 18px 102px;
+  margin: 0px 20px;
 }
 ul.team-nav {
   font-family: 'Francois One', sans-serif;
