--- a/assets/less/custom.less
+++ b/assets/less/custom.less
@@ -1,5 +1,6 @@
 @import url("//fonts.googleapis.com/css?family=Francois+One|Source+Sans+Pro:900,700,400,300");
 
+@import "variables.less";
 @import "mixins.less";
 
 body {
@@ -9,7 +10,7 @@ body {
 }
 
 #team-logo {
-	margin: 20px 0px 18px 102px;
+	margin: 0px 20px;
 }
 
 ul.team-nav {
